--- a/mushrooms_db.ipynb
+++ b/mushrooms_db.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "f07a6b60",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "import csv"
    ]
   },
   {
@@ -24,259 +25,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ee889452",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>class</th>\n",
-       "      <th>cap_shape</th>\n",
-       "      <th>cap_surface</th>\n",
-       "      <th>cap_color</th>\n",
-       "      <th>bruises</th>\n",
-       "      <th>odor</th>\n",
-       "      <th>gill_attachment</th>\n",
-       "      <th>gill_spacing</th>\n",
-       "      <th>gill_size</th>\n",
-       "      <th>gill_color</th>\n",
-       "      <th>...</th>\n",
-       "      <th>stalk_surface_below_ring</th>\n",
-       "      <th>stalk_color_above_ring</th>\n",
-       "      <th>stalk_color_below_ring</th>\n",
-       "      <th>veil_type</th>\n",
-       "      <th>veil_color</th>\n",
-       "      <th>ring_number</th>\n",
-       "      <th>ring_type</th>\n",
-       "      <th>spore_print_color</th>\n",
-       "      <th>population</th>\n",
-       "      <th>habitat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   class  cap_shape  cap_surface  cap_color  bruises  odor  gill_attachment  \\\n",
-       "0      1          5            2          4        1     6                1   \n",
-       "1      0          5            2          9        1     0                1   \n",
-       "2      0          0            2          8        1     3                1   \n",
-       "3      1          5            3          8        1     6                1   \n",
-       "4      0          5            2          3        0     5                1   \n",
-       "\n",
-       "   gill_spacing  gill_size  gill_color  ...  stalk_surface_below_ring  \\\n",
-       "0             0          1           4  ...                         2   \n",
-       "1             0          0           4  ...                         2   \n",
-       "2             0          0           5  ...                         2   \n",
-       "3             0          1           5  ...                         2   \n",
-       "4             1          0           4  ...                         2   \n",
-       "\n",
-       "   stalk_color_above_ring  stalk_color_below_ring  veil_type  veil_color  \\\n",
-       "0                       7                       7          0           2   \n",
-       "1                       7                       7          0           2   \n",
-       "2                       7                       7          0           2   \n",
-       "3                       7                       7          0           2   \n",
-       "4                       7                       7          0           2   \n",
-       "\n",
-       "   ring_number  ring_type  spore_print_color  population  habitat  \n",
-       "0            1          4                  2           3        5  \n",
-       "1            1          4                  3           2        1  \n",
-       "2            1          4                  3           2        3  \n",
-       "3            1          4                  2           3        5  \n",
-       "4            1          0                  3           0        1  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3731144687.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\sugim\\AppData\\Local\\Temp\\ipykernel_27772\\3731144687.py\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    sqlite> .mode csv\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "# Import mushroom data as data frame\n",
     "\n",
-    "mushrooms_encoded_df = pd.read_csv('Mushrooms_encoded.csv')\n",
+    "file = open('mushrooms.csv')\n",
+    "contents = csv.reader(file)\n",
+    "    \n",
     "\n",
     "# mushrooms_encoded_df.head()\n",
     "\n",
-    "mushrooms_encoded_df = mushrooms_encoded_df.drop(columns=\"Unnamed: 0\")\n",
-    "mushrooms_encoded_df.head()"
+    "# mushrooms_encoded_df = mushrooms_encoded_df.drop(columns=\"Unnamed: 0\")\n",
+    "# mushrooms_encoded_df.head()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e2334af9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x1a0bf8c7b90>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cur.execute(\"create table features (cap_shape integer, cap_surface integer, cap_color integer, bruises integer, odor integer, gill_attachment integer, gill_spacing integer, gill_size integer, gill_color integer, stalk_shape integer, stalk_root integer, stalk_surface_above_ring integer, stalk_surface_below_ring integer, stalk_color_above_ring integer, stalk_color_below_ring integer, veil_type integer, veil_color integer, ring_number integer, ring_type integer, spore_print_color integer, population integer, habitat integer)\")"
+    "cur.execute(\"create table features (cap_shape varchar, cap_surface varchar, cap_color varchar, bruises varchar, odor varchar, gill_attachment varchar, gill_spacing varchar, gill_size varchar, gill_color varchar, stalk_shape varchar, stalk_root varchar, stalk_surface_above_ring varchar, stalk_surface_below_ring varchar, stalk_color_above_ring varchar, stalk_color_below_ring varchar, veil_type varchar, veil_color varchar, ring_number varchar, ring_type varchar, spore_print_color varchar, population varchar, habitat varchar)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "92e0a4e5",
    "metadata": {},
    "outputs": [],
    "source": [
-
     "# con.commit()"
-
    ]
   }
  ],
