Add final code comments

--- a/mushrooms_ml_model.ipynb
+++ b/mushrooms_ml_model.ipynb
@@ -1926,6 +1926,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a column in X_test dataframe to hold predicted class values\n",
+    "\n",
     "X_test['Predicted'] = predictions"
    ]
   },
@@ -1936,6 +1938,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a column in X_test dataframe to hold actual class values\n",
+    "\n",
     "X_test['Actual'] = y_test"
    ]
   },
@@ -2232,6 +2236,8 @@
     }
    ],
    "source": [
+    "# Create a dataframe to just hold predicted and actual class values for test data \n",
+    "\n",
     "cm_data = X_test[['Predicted', 'Actual']]\n",
     "cm_data.head()"
    ]
@@ -2243,6 +2249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export predicted and actual class values of test data to csv, for purposes of visualizing confusion matrix in Tableau\n",
+    "\n",
     "cm_data.to_csv('cm_data.csv')"
    ]
   }
